<?xml version="1.0"?>
<package>
  <name>rbdl</name>
  <version>0.0.0</version>
  <description>A fixed version of rbdl with catkin support</description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>
  <author email="martin.felis@iwr.uni-heidelberg.de">Martin Felis</author>

  <license>zlib</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend> <!-- rhobandeps/eigen -->

  <run_depend>eigen</run_depend>

  <export>
  </export>
</package>
