CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
project(rbdl_urdfreader)

find_package(catkin REQUIRED COMPONENTS rbdl)

catkin_package(
  INCLUDE_DIRS .
  LIBRARIES rbdl_urdfreader
  CATKIN_DEPENDS rbdl
)

IF (NOT (${CMAKE_MAJOR_VERSION} LESS 3))
    cmake_policy(SET CMP0048 OLD)
ENDIF (NOT (${CMAKE_MAJOR_VERSION} LESS 3))

LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake )

FIND_PACKAGE(URDF)

SET_TARGET_PROPERTIES ( ${PROJECT_EXECUTABLES} PROPERTIES
	LINKER_LANGUAGE CXX
)

INCLUDE_DIRECTORIES (
  ${catkin_INCLUDE_DIRS}
	${URDF_INCLUDE_DIRS}
)

# Options
SET ( URDFREADER_SOURCES
	urdfreader.cc
	)

ADD_EXECUTABLE (rbdl_urdfreader_util rbdl_urdfreader_util.cc)

ADD_LIBRARY ( rbdl_urdfreader SHARED ${URDFREADER_SOURCES} )

SET_TARGET_PROPERTIES ( rbdl_urdfreader PROPERTIES
	VERSION ${RBDL_VERSION}
	SOVERSION ${RBDL_SO_VERSION}
  )

TARGET_LINK_LIBRARIES (rbdl_urdfreader
  ${catkin_LIBRARIES}
	${URDF_LIBRARIES}
	)

TARGET_LINK_LIBRARIES (rbdl_urdfreader_util
	rbdl_urdfreader
  ${catkin_LIBRARIES}
	)

#INSTALL (TARGETS rbdl_urdfreader rbdl_urdfreader_util
#	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
#	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
#	)
#
#FILE ( GLOB headers
#	"${CMAKE_CURRENT_SOURCE_DIR}/*.h"
#	)
#
#INSTALL ( FILES ${headers} 
#	DESTINATION
#	${CMAKE_INSTALL_INCLUDEDIR}/rbdl/addons/urdfreader 
#	)
