CMAKE_MINIMUM_REQUIRED(VERSION 3.16.3)
project(rbdl_urdfreader)

# IMPORTED FROM CORE CMakeLists.txt
SET ( RBDL_VERSION_MAJOR 2 )
SET ( RBDL_VERSION_MINOR 4 )
SET ( RBDL_VERSION_PATCH 0 )
SET ( RBDL_VERSION 
	${RBDL_VERSION_MAJOR}.${RBDL_VERSION_MINOR}.${RBDL_VERSION_PATCH}
)
SET ( RBDL_SO_VERSION 
	${RBDL_VERSION_MAJOR}.${RBDL_VERSION_MINOR}.${RBDL_VERSION_PATCH}
)
SET (PROJECT_VERSION ${RBDL_VERSION})
# END of core import

if (NOT MSVC)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
endif()

SET_TARGET_PROPERTIES ( ${PROJECT_EXECUTABLES} PROPERTIES
	LINKER_LANGUAGE CXX
)

# Options
SET ( URDFREADER_SOURCES
	urdfreader/urdfreader.cc
	)

ADD_EXECUTABLE (rbdl_urdfreader_util urdfreader/rbdl_urdfreader_util.cc)

ADD_LIBRARY ( rbdl_urdfreader SHARED ${URDFREADER_SOURCES} )

SET_TARGET_PROPERTIES ( rbdl_urdfreader PROPERTIES
	VERSION ${RBDL_VERSION}
	SOVERSION ${RBDL_SO_VERSION}
  )
TARGET_INCLUDE_DIRECTORIES(rbdl_urdfreader PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>
)

TARGET_LINK_LIBRARIES (rbdl_urdfreader PUBLIC
  rbdl urdfdom
	)

TARGET_LINK_LIBRARIES (rbdl_urdfreader_util
	rbdl_urdfreader
	)

#INSTALL (TARGETS rbdl_urdfreader rbdl_urdfreader_util
#	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
#	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
#	)
#
#FILE ( GLOB headers
#	"${CMAKE_CURRENT_SOURCE_DIR}/*.h"
#	)
#
#INSTALL ( FILES ${headers} 
#	DESTINATION
#	${CMAKE_INSTALL_INCLUDEDIR}/rbdl/addons/urdfreader 
#	)
